fixed intro button centering issue by wrapping in div

--- a/style/index.css
+++ b/style/index.css
@@ -202,6 +202,9 @@ footer button:hover {
 		width: 70%;
 		padding: 2rem 0 0 0;
 	}
+	.intro-button {
+		text-align: center;
+	}
 	.intro-text {
 		text-align: center;
 		padding: 0 0rem 1rem 0;
